--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,13 @@
             />
         <activity android:name=".AddServiceActivity"
             />
+        <activity android:name=".ServiceDetailActivity"
+            />
+        <activity android:name=".CommnetActivity"
+            />
         <activity android:name=".EditFollwerActivity"
+            />
+        <activity android:name=".EditBlogActivity"
             />
         <activity android:name=".FollowersActivity"
             />
