--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,12 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     defaultConfig {
         applicationId "com.example.djikonfordj"
         minSdkVersion 16
@@ -39,5 +45,12 @@ dependencies {
 
     implementation 'com.github.scottyab:showhidepasswordedittext:0.8'
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
+
+    //retrofic and gson convertor
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //picaso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
