--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         android.defaultConfig.vectorDrawables.useSupportLibrary = true
@@ -60,6 +61,14 @@ dependencies {
     //biomatric
     implementation 'androidx.biometric:biometric:1.0.1'
 
+    //facebook
+    implementation 'com.facebook.android:facebook-login:[5,6)'
+
+    //Google
+    implementation 'com.google.android.gms:play-services-auth:18.1.0'
+
+    //Multidex
+    implementation 'com.android.support:multidex:1.0.3'
 
     //retrofic and gson convertor
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
