--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,29 @@
         android:resizeableActivity="false"
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
+
+
         <activity android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
 
@@ -41,42 +64,23 @@
             android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity android:name=".PurchaseServiceActivity"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
-            />
-        <activity android:name=".BlockedUserActivity"
-            />
-        <activity android:name=".PackageActivity"
-            />
-        <activity android:name=".AddServiceActivity"
-            />
-        <activity android:name=".ServiceDetailActivity"
-            />
-        <activity android:name=".CommnetActivity"
-            />
-        <activity android:name=".EditFollwerActivity"
-            />
-        <activity android:name=".EditBlogActivity"
-            />
-        <activity android:name=".FollowersActivity"
-            />
-        <activity android:name=".ResetPasswordActivity"
-            />
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+        <activity android:name=".BlockedUserActivity" />
+        <activity android:name=".PackageActivity" />
+        <activity android:name=".AddServiceActivity" />
+        <activity android:name=".ServiceDetailActivity" />
+        <activity android:name=".CommnetActivity" />
+        <activity android:name=".EditFollwerActivity" />
+        <activity android:name=".EditBlogActivity" />
+        <activity android:name=".FollowersActivity" />
+        <activity android:name=".ResetPasswordActivity" />
+        <activity android:name=".BookingHistoryActivity" />
+        <activity android:name=".ProfileSettingActivity" />
+        <activity android:name=".PaymentMethodActivity" />
+        <activity android:name=".SignInActivity" />
+        <activity android:name=".RegistrationActivity" />
 
-        <activity android:name=".BookingHistoryActivity"
-            />
-        <activity android:name=".ProfileSettingActivity"
-            android:screenOrientation="portrait"
-            android:resizeableActivity="false"
-            />
-
-        <activity android:name=".PaymentMethodActivity"
-            />
-        <activity android:name=".SignInActivity"
-            />
-        <activity android:name=".RegistrationActivity"
-            />
-        <activity android:name=".SplashScreenActivity"
-           >
+        <activity android:name=".SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
