--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,7 @@ dependencies {
     //image Cropper
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.5.+'
 
+    //imageslider
+    implementation 'com.github.smarteist:autoimageslider:1.3.9-appcompat'
+
 }
