--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "com.Ikonholdings.ikoniconnects_subscriber"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 2
-        versionName "1.0."
+        versionCode 3
+        versionName "1.0"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
